{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 385,
  "lineage": "20731755-da94-9e1e-8428-7b907b1cef3f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-026dea5602e368e96",
            "arn": "arn:aws:ec2:us-east-2:533998520131:instance/i-0077f141a6b41467a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0077f141a6b41467a",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2ssh",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0774b3ec5296a6102",
            "private_dns": "ip-10-0-0-6.us-east-2.compute.internal",
            "private_ip": "10.0.0.6",
            "public_dns": "ec2-18-191-195-7.us-east-2.compute.amazonaws.com",
            "public_ip": "18.191.195.7",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0aacb6253d0b00355",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08bd1b746d553fda4",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0958c43b492de768f"
            ]
          },
          "dependencies": [
            "aws_security_group.sgiac",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-026dea5602e368e96",
            "arn": "arn:aws:ec2:us-east-2:533998520131:instance/i-026aca0f797f2ebcc",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-026aca0f797f2ebcc",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2ssh",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cbb308af4ea91848",
            "private_dns": "ip-10-0-1-203.us-east-2.compute.internal",
            "private_ip": "10.0.1.203",
            "public_dns": "ec2-18-224-2-197.us-east-2.compute.amazonaws.com",
            "public_ip": "18.224.2.197",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0bee6cc7b6b64f1d3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00684f53971663be0",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0958c43b492de768f"
            ]
          },
          "dependencies": [
            "aws_security_group.sgiac",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0c8ad2b89cf1cb90f",
            "owner_id": "533998520131",
            "tags": {
              "Name": "IGW",
              "createdby": "terraform",
              "project": "1"
            },
            "vpc_id": "vpc-02342cc1066ac79dc"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "PublicRT",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0d14f53b759303e7c",
            "owner_id": "533998520131",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c8ad2b89cf1cb90f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PublicRT",
              "createdby": "terraform",
              "project": "1"
            },
            "vpc_id": "vpc-02342cc1066ac79dc"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publicRT-subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0674acc80fc05c5c6",
            "route_table_id": "rtb-0d14f53b759303e7c",
            "subnet_id": "subnet-08bd1b746d553fda4"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.PublicRT",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d174610da5bb3db9",
            "route_table_id": "rtb-0d14f53b759303e7c",
            "subnet_id": "subnet-00684f53971663be0"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.PublicRT",
            "aws_subnet.public-subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sgiac",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:533998520131:security-group/sg-0958c43b492de768f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0958c43b492de768f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sgiacdynamic",
            "name_prefix": null,
            "owner_id": "533998520131",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-02342cc1066ac79dc"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:533998520131:subnet/subnet-0a993ef2822218dde",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0a993ef2822218dde",
            "map_public_ip_on_launch": false,
            "owner_id": "533998520131",
            "tags": {
              "Name": "privatesubnet-1",
              "createdby": "terraform",
              "project": "1"
            },
            "vpc_id": "vpc-02342cc1066ac79dc"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:533998520131:subnet/subnet-08bd1b746d553fda4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-08bd1b746d553fda4",
            "map_public_ip_on_launch": true,
            "owner_id": "533998520131",
            "tags": {
              "Name": "publicsubnet-1",
              "createdby": "terraform",
              "project": "1"
            },
            "vpc_id": "vpc-02342cc1066ac79dc"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:533998520131:subnet/subnet-00684f53971663be0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-00684f53971663be0",
            "map_public_ip_on_launch": true,
            "owner_id": "533998520131",
            "tags": {
              "Name": "publicsubnet-2",
              "createdby": "terraform",
              "project": "1"
            },
            "vpc_id": "vpc-02342cc1066ac79dc"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:533998520131:vpc/vpc-02342cc1066ac79dc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d4e72099327fd604",
            "default_route_table_id": "rtb-0876cef441f244183",
            "default_security_group_id": "sg-0b5563385cc1351ea",
            "dhcp_options_id": "dopt-feb60095",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-02342cc1066ac79dc",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0876cef441f244183",
            "owner_id": "533998520131",
            "tags": {
              "Name": "VPCIAC",
              "createdby": "terraform",
              "project": "1"
            }
          }
        }
      ]
    }
  ]
}